jds/src/main/java/com/github/braisdom/jsql/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package com.github.braisdom.jsql;

import java.util.*;
import com.github.braisdom.jsql.ast.*;

public final class Parser implements ParserConstants {

    public static String unquote(String value, String quote) {
        if (value.startsWith(quote) && (value.endsWith(quote))) {
            return value.substring(1, value.length() - 1);
        }
        return value;
    }

  final public SqlNode SqlNode() throws ParseException {final SqlNode sqlNode = new SqlNode();
    ImportNode importNode;
    DatasetNode datasetNode;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IMPORT:
      case TYPEDEF:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IMPORT:{
        importNode = ImportNode();
sqlNode.addImportNode(importNode);
        break;
        }
      case TYPEDEF:{
        datasetNode = DatasetNode();
sqlNode.addDatasetNode(datasetNode);
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return sqlNode;}
    throw new Error("Missing return statement in function");
}

  final public ImportNode ImportNode() throws ParseException {ImportNode importNode;
    String importDeclaration;
    jj_consume_token(IMPORT);
    importDeclaration = Name();
importNode = new ImportNode(importDeclaration);
    jj_consume_token(SEMICOLON);
{if ("" != null) return importNode;}
    throw new Error("Missing return statement in function");
}

  final public DatasetNode DatasetNode() throws ParseException {final DatasetNode datasetNode = new DatasetNode();
    FromNode fromNode;
    FormalParameterNode parameter;
    Projectional projectional;
    jj_consume_token(TYPEDEF);
    jj_consume_token(DATASET);
    jj_consume_token(TYPE_NAME);
datasetNode.setName(getToken(0).image);
    jj_consume_token(LPAREN);
    parameter = FormalParameterNode();
datasetNode.addFormalParameter(parameter);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      parameter = FormalParameterNode();
datasetNode.addFormalParameter(parameter);
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    jj_consume_token(PROJECTION);
    jj_consume_token(LBRACKET);
    Projectional(datasetNode);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMMA);
      Projectional(datasetNode);
    }
    jj_consume_token(RBRACKET);
    jj_consume_token(COMMA);
    jj_consume_token(FROM);
    jj_consume_token(LPAREN);
    fromNode = FromNode();
datasetNode.addFromNode(fromNode);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      fromNode = FromNode();
datasetNode.addFromNode(fromNode);
    }
    jj_consume_token(RPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMMA:{
      jj_consume_token(COMMA);
      jj_consume_token(PREDICATE);
      jj_consume_token(LPAREN);
      jj_consume_token(RPAREN);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
{if ("" != null) return datasetNode;}
    throw new Error("Missing return statement in function");
}

  final public FromNode FromNode() throws ParseException {FromNode fromNode;
    if (jj_2_1(2147483647)) {
      fromNode = SqlFunctionCallNode();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AS:{
        jj_consume_token(AS);
        jj_consume_token(IDENTIFIER);
fromNode.setAlias(token.image);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    } else if (jj_2_2(2147483647)) {
      fromNode = SymbolNode();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AS:{
        jj_consume_token(AS);
        jj_consume_token(IDENTIFIER);
fromNode.setAlias(token.image);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return fromNode;}
    throw new Error("Missing return statement in function");
}

  final public FormalParameterNode FormalParameterNode() throws ParseException {String type;
    String name;
    jj_consume_token(TYPE_NAME);
type = getToken(0).image;
    jj_consume_token(IDENTIFIER);
name = getToken(0).image;
{if ("" != null) return new FormalParameterNode(type, name);}
    throw new Error("Missing return statement in function");
}

  final public void Projectional(DatasetNode datasetNode) throws ParseException {Projectional projectional = null;
    Token token;
    if (jj_2_3(2147483647)) {
      projectional = ExpressionNode();
      jj_consume_token(AS);
      token = jj_consume_token(IDENTIFIER);
projectional.setAlias(token.image);
    } else if (jj_2_4(2147483647)) {
      projectional = SymbolNode();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AS:{
        jj_consume_token(AS);
        token = jj_consume_token(IDENTIFIER);
projectional.setAlias(token.image);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        ;
      }
    } else if (jj_2_5(2147483647)) {
      projectional = SqlLiteral();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AS:{
        jj_consume_token(AS);
        token = jj_consume_token(IDENTIFIER);
projectional.setAlias(token.image);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        ;
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TYPE_NAME:
      case IDENTIFIER:{
        projectional = SqlFunctionCallNode();
        jj_consume_token(AS);
        token = jj_consume_token(IDENTIFIER);
projectional.setAlias(token.image);
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
datasetNode.addProjectional(projectional);
}

  final public SqlFunctionCallNode SqlFunctionCallNode() throws ParseException {SqlFunctionCallNode sqlFunctionCallNode = new SqlFunctionCallNode();
    SqlFunctionOperand operand;
    if (jj_2_6(2)) {
      jj_consume_token(TYPE_NAME);
sqlFunctionCallNode.setType(token.image);
      jj_consume_token(DOT);
    } else {
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      break;
      }
    case TYPE_NAME:{
      jj_consume_token(TYPE_NAME);
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
sqlFunctionCallNode.setName(getToken(0).image);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COLON:
    case STRINGVAL:
    case NULL:
    case TYPE_NAME:
    case IDENTIFIER:
    case DECIMAL_LITERAL:
    case FLOATING_LITERAL:
    case 61:{
      operand = SqlFunctionOperand();
sqlFunctionCallNode.addOperands(operand);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
        operand = SqlFunctionOperand();
sqlFunctionCallNode.addOperands(operand);
      }
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
{if ("" != null) return sqlFunctionCallNode;}
    throw new Error("Missing return statement in function");
}

  final public SqlFunctionOperand SqlFunctionOperand() throws ParseException {SqlFunctionOperand operand;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case STRINGVAL:
    case NULL:
    case DECIMAL_LITERAL:
    case FLOATING_LITERAL:{
      operand = SqlLiteral();
{if ("" != null) return operand;}
      break;
      }
    case COLON:
    case 61:{
      operand = SymbolNode();
{if ("" != null) return operand;}
      break;
      }
    case TYPE_NAME:
    case IDENTIFIER:{
      operand = SqlFunctionCallNode();
{if ("" != null) return operand;}
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public ExpressionNode ExpressionNode() throws ParseException {ExpressionNode expressionNode = new ExpressionNode();
    ExpressionOperand left;
    String operator;
    ExpressionOperand right;
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LPAREN:
      case COLON:
      case STRINGVAL:
      case NULL:
      case DECIMAL_LITERAL:
      case FLOATING_LITERAL:
      case 61:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_6;
      }
      left = ExpressionOperand();
expressionNode.setLeft(left);
      operator = ExpressionOperator();
expressionNode.setOperator(operator);
      right = ExpressionOperand();
expressionNode.setRight(right);
    }
{if ("" != null) return expressionNode;}
    throw new Error("Missing return statement in function");
}

  final public ExpressionOperand ExpressionOperand() throws ParseException {ExpressionOperand operand = null;
    ExpressionNode expressionNode;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case STRINGVAL:
    case NULL:
    case DECIMAL_LITERAL:
    case FLOATING_LITERAL:{
      operand = SqlLiteral();
{if ("" != null) return operand;}
      break;
      }
    case COLON:
    case 61:{
      operand = SymbolNode();
{if ("" != null) return operand;}
      break;
      }
    case LPAREN:{
      jj_consume_token(LPAREN);
      expressionNode = ExpressionNode();
      jj_consume_token(RPAREN);
expressionNode.setEnclosed(true);
            {if ("" != null) return expressionNode;}
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public LogicExpression LogicExpression() throws ParseException {LogicExpression logicExpression = new LogicExpression();
    ExpressionOperand left;
    String operator;
    ExpressionOperand right;
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LPAREN:
      case COLON:
      case STRINGVAL:
      case NULL:
      case DECIMAL_LITERAL:
      case FLOATING_LITERAL:
      case 61:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_7;
      }
      left = ExpressionOperand();
logicExpression.setLeft(left);
      operator = ExpressionOperator();
logicExpression.setOperator(operator);
      right = ExpressionOperand();
logicExpression.setRight(right);
    }
{if ("" != null) return logicExpression;}
    throw new Error("Missing return statement in function");
}

  final public ExpressionOperand LogicExpressionOperand() throws ParseException {ExpressionOperand operand = null;
    LogicExpression logicExpression;
    if (jj_2_7(2147483647)) {
      operand = ExpressionOperand();
{if ("" != null) return operand;}
    } else if (jj_2_8(2147483647)) {
      jj_consume_token(LPAREN);
      logicExpression = LogicExpression();
      jj_consume_token(RPAREN);
logicExpression.setEnclosed(true);
            {if ("" != null) return logicExpression;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public String ExpressionOperator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:{
      jj_consume_token(PLUS);
{if ("" != null) return token.image;}
      break;
      }
    case MINUS:{
      jj_consume_token(MINUS);
{if ("" != null) return token.image;}
      break;
      }
    case STAR:{
      jj_consume_token(STAR);
{if ("" != null) return token.image;}
      break;
      }
    case SLASH:{
      jj_consume_token(SLASH);
{if ("" != null) return token.image;}
      break;
      }
    case REM:{
      jj_consume_token(REM);
{if ("" != null) return token.image;}
      break;
      }
    case SC_OR:{
      jj_consume_token(SC_OR);
{if ("" != null) return token.image;}
      break;
      }
    case SC_AND:{
      jj_consume_token(SC_AND);
{if ("" != null) return token.image;}
      break;
      }
    case LIKE:{
      jj_consume_token(LIKE);
{if ("" != null) return token.image;}
      break;
      }
    case EQ:
    case GT:
    case LT:
    case LE:
    case GE:
    case NE:{
      CompareOperator();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public String LogicOperator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SC_AND:{
      jj_consume_token(SC_AND);
{if ("" != null) return token.image;}
      break;
      }
    case SC_OR:{
      jj_consume_token(SC_OR);
{if ("" != null) return token.image;}
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public String CompareOperator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQ:{
      jj_consume_token(EQ);
{if ("" != null) return token.image;}
      break;
      }
    case GT:{
      jj_consume_token(GT);
{if ("" != null) return token.image;}
      break;
      }
    case GE:{
      jj_consume_token(GE);
{if ("" != null) return token.image;}
      break;
      }
    case NE:{
      jj_consume_token(NE);
{if ("" != null) return token.image;}
      break;
      }
    case LT:{
      jj_consume_token(LT);
{if ("" != null) return token.image;}
      break;
      }
    case LE:{
      jj_consume_token(LE);
{if ("" != null) return token.image;}
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public SqlLiteral SqlLiteral() throws ParseException {Object value = null;
    Token token;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case STRINGVAL:{
      token = jj_consume_token(STRINGVAL);
value = token.image;
      break;
      }
    case DECIMAL_LITERAL:{
      token = jj_consume_token(DECIMAL_LITERAL);
value = Integer.parseInt(token.image);
      break;
      }
    case FLOATING_LITERAL:{
      token = jj_consume_token(FLOATING_LITERAL);
value = Float.parseFloat(token.image);
      break;
      }
    case NULL:{
      token = jj_consume_token(NULL);
value = null;
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return new SqlLiteral(value);}
    throw new Error("Missing return statement in function");
}

  final public SymbolNode SymbolNode() throws ParseException {SymbolNode symbolNode = new SymbolNode();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COLON:{
      jj_consume_token(COLON);
      jj_consume_token(IDENTIFIER);
symbolNode.setSymbolName(token.image);
      break;
      }
    case 61:{
      jj_consume_token(61);
      jj_consume_token(IDENTIFIER);
symbolNode.setDatasetName(token.image);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DOT:{
        jj_consume_token(DOT);
        jj_consume_token(IDENTIFIER);
symbolNode.setSymbolName(token.image);
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        ;
      }
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return symbolNode;}
    throw new Error("Missing return statement in function");
}

  final public String Name() throws ParseException {List<String> names = new ArrayList();
    jj_consume_token(IDENTIFIER);
names.add(getToken(0).image);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DOT:{
        ;
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        break label_8;
      }
      jj_consume_token(DOT);
      jj_consume_token(IDENTIFIER);
names.add(getToken(0).image);
    }
{if ("" != null) return String.join(".", names.toArray(new String[0]));}
    throw new Error("Missing return statement in function");
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_3R_ExpressionOperand_276_5_13()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_ExpressionOperand_277_9_23()) {
    jj_scanpos = xsp;
    if (jj_3R_ExpressionOperand_278_9_24()) {
    jj_scanpos = xsp;
    if (jj_3R_ExpressionOperand_279_9_25()) return true;
    }
    }
    return false;
  }

  private boolean jj_3R_SqlLiteral_368_7_22()
 {
    if (jj_scan_token(NULL)) return true;
    return false;
  }

  private boolean jj_3R_SqlLiteral_367_7_21()
 {
    if (jj_scan_token(FLOATING_LITERAL)) return true;
    return false;
  }

  private boolean jj_3R_SqlLiteral_366_7_20()
 {
    if (jj_scan_token(DECIMAL_LITERAL)) return true;
    return false;
  }

  private boolean jj_3R_SqlLiteral_365_7_19()
 {
    if (jj_scan_token(STRINGVAL)) return true;
    return false;
  }

  private boolean jj_3R_ExpressionNode_263_13_18()
 {
    if (jj_3R_ExpressionOperand_276_5_13()) return true;
    if (jj_3R_ExpressionOperator_324_5_30()) return true;
    if (jj_3R_ExpressionOperand_276_5_13()) return true;
    return false;
  }

  private boolean jj_3R_SqlLiteral_365_5_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_SqlLiteral_365_7_19()) {
    jj_scanpos = xsp;
    if (jj_3R_SqlLiteral_366_7_20()) {
    jj_scanpos = xsp;
    if (jj_3R_SqlLiteral_367_7_21()) {
    jj_scanpos = xsp;
    if (jj_3R_SqlLiteral_368_7_22()) return true;
    }
    }
    }
    return false;
  }

  private boolean jj_3R_CompareOperator_356_5_49()
 {
    if (jj_scan_token(LE)) return true;
    return false;
  }

  private boolean jj_3R_ExpressionNode_261_5_11()
 {
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_ExpressionNode_263_13_18()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_CompareOperator_355_5_48()
 {
    if (jj_scan_token(LT)) return true;
    return false;
  }

  private boolean jj_3R_CompareOperator_354_5_47()
 {
    if (jj_scan_token(NE)) return true;
    return false;
  }
